pihole mgmt modify env var for pass.

--- a/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
@@ -50,7 +50,7 @@ spec:
         env:
         - name: TZ
           value: "America/New_York"
-        - name: FTLCONF_webserver_api_password
+        - name: WEBPASSWORD
           valueFrom:
             secretKeyRef:
               name: pihole-mgmt-secrets
