--- a/pihole_mgmt_deployment/pihole-mgmt-secrets.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-secrets.yaml
@@ -6,4 +6,4 @@ metadata:
 type: Opaque
 data:
   # base64 encode. Need to move later to a proper encrpytion method for secrets.
-  password: superPassword
+  password: c3VwZXJQYXNzd29yZA==
