--- a/pihole_mgmt_deployment/pihole-mgmt-secrets.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-secrets.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pihole-mgmt-secrets
+  labels:
+    app: pihole-mgmt
   # namespace:
 type: Opaque
 data:
