Fix LB app selector

--- a/pihole_mgmt_deployment/pihole-mgmt-dns-external-default.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-dns-external-default.yaml
@@ -9,7 +9,7 @@ metadata:
   #namespace: pihole
 spec:
   selector:
-    app: pihole
+    app: pihole-mgmt
   ports:
     - name: dns-tcp
       protocol: TCP
