--- a/jellyfin_deployment/jellyfin-deployment.yaml
+++ b/jellyfin_deployment/jellyfin-deployment.yaml
@@ -24,7 +24,7 @@ spec:
         node.kubernetes.io/microk8s-worker: microk8s-worker
       containers:
       - name: jellyfin
-        image: jellyfin/jellyfin:2025090105 # update (9/7/25)
+        image: linuxserver/jellyfin:10.10.7 # update (9/7/25)
         ports:
         - containerPort: 8096 # The port your application listens on INSIDE the container (e.g., 8080)
           name: jellyfin-http # http port for jellyfin container.
