add namespace to pihole deployment

--- a/pihole_deployment/pihole-clusterIP.yaml
+++ b/pihole_deployment/pihole-clusterIP.yaml
@@ -6,6 +6,7 @@ kind: Service
 metadata:
   # name of the service unique to the cluster:
   name: pihole-clusterip-svc
+  namespace: pihole
   labels:
     app: pihole
 spec:
