--- a/pihole_deployment/pihole-dns-external.yaml
+++ b/pihole_deployment/pihole-dns-external.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pihole-dns-external
-  #namespace: pihole
+  namespace: pihole
 spec:
   selector:
     app: pihole
