--- a/pihole_deployment/pihole-pvc-nfs.yaml
+++ b/pihole_deployment/pihole-pvc-nfs.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pihole-pvc # PVC Claim name.
+  namespace: pihole
   labels: 
     app: pihole
 spec:
