--- a/pihole_deployment/pihole-pv-nfs.yaml
+++ b/pihole_deployment/pihole-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pihole-pv # unique name for PV.
+  namespace: pihole
   labels:
     app: pihole
 spec:
