--- a/pihole_deployment/pihole-deployment.yaml
+++ b/pihole_deployment/pihole-deployment.yaml
@@ -10,7 +10,7 @@ metadata:
     app: pihole
 spec:
   replicas: 1 # Will keep at 1 as multiple instances can cause issue. SQLite does not do well with multiple instances writing to it at the same time. 
-  revisionHistoryLimit: 2
+  revisionHistoryLimit: 2  # Max number of replicasets
   selector:
     # Must match the labels on the Pod template below and all other services.
     matchLabels:
