add pihole mgmt to pihole namespace.

--- a/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-deployment.yaml
@@ -5,6 +5,7 @@ kind: Deployment
 metadata:
   # Unique name for the deployment/
   name: pihole-mgmt-deployment
+  namespace: pihole
   labels:
     app: pihole-mgmt
 spec:
