--- a/pihole_mgmt_deployment/pihole-mgmt-clusterIP.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-clusterIP.yaml
@@ -6,6 +6,7 @@ kind: Service
 metadata:
   # name of the service unique to the cluster:
   name: pihole-mgmt-clusterip-svc
+  namespace: pihole
   labels:
     app: pihole-mgmt
 spec:
