--- a/pihole_mgmt_deployment/pihole-mgmt-dns-external.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-dns-external.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pihole-mgmt-dns-external
-  # namespace: pihole
+  namespace: pihole
   # need to add annotation so the service knows to use the vlan-mgmt IP address pool.
   annotations:
     metallb.io/address-pool: vlan-mgmt
