--- a/pihole_mgmt_deployment/pihole-mgmt-pv-nfs.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: pihole-mgmt-pv #unique name for PV.
+  namespace: pihole
   labels:
     app: pihole-mgmt
 spec:
