--- a/pihole_mgmt_deployment/pihole-mgmt-pvc-nfs.yaml
+++ b/pihole_mgmt_deployment/pihole-mgmt-pvc-nfs.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pihole-mgmt-pvc # PVC Claim name.
+  namespace: pihole
   labels: 
     app: pihole-mgmt
 spec:
