fix plex pvc storageClassName.

--- a/plex_deployment/plex-pvc-nfs.yaml
+++ b/plex_deployment/plex-pvc-nfs.yaml
@@ -11,7 +11,7 @@ metadata:
   labels:
     app: plex
 spec:
-  storageClassName: 
+  storageClassName: nfs
   accessModes:
     - ReadWriteMany
   resources:
