Fix app to apps typo in deployment.

--- a/plex_deployment/plex-deployment.yaml
+++ b/plex_deployment/plex-deployment.yaml
@@ -1,7 +1,7 @@
 # --- Deployment ---
 # Manages the Pods running your application container.
 
-apiVersion: app/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: plex-deployment
