--- a/plex_deployment/plex-external-mgmt.yaml
+++ b/plex_deployment/plex-external-mgmt.yaml
@@ -18,4 +18,4 @@ spec:
       name: http
   type: LoadBalancer
   loadBalancerIP: 10.0.250.215 # Target IP for the LB service.
-  externalTrafficPolicy: Local # Preserves source IP; Forces traffic to local node of pod.
+  # externalTrafficPolicy: Local # Preserves source IP; Forces traffic to local node of pod.    # Commenting out for testing.
