uncomment node selector.

--- a/plex_deployment/plex-deployment.yaml
+++ b/plex_deployment/plex-deployment.yaml
@@ -20,8 +20,8 @@ spec:
         app: plex
     spec:
       # selector so the Pod will only run on worker nodes with multiple vlans.
-      # nodeSelector:
-        # node.kubernetes.io/microk8s-worker: microk8s-worker
+      nodeSelector:
+        node.kubernetes.io/microk8s-worker: microk8s-worker
       containers:
       - name: plex
         image: linuxserver/plex:1.42.1 # updated 9/13/25
