moved jellyfin deployment to media namespace.

--- a/jellyfin_deployment/jellyfin-clusterIP.yaml
+++ b/jellyfin_deployment/jellyfin-clusterIP.yaml
@@ -6,6 +6,7 @@ kind: Service
 metadata:
   # name: A unique name for the ClusterIP service.
   name: jellyfin-clusterip-svc
+  namespace: media
   labels:
     app: jellyfin
 spec:
