--- a/jellyfin_deployment/jellyfin-deployment.yaml
+++ b/jellyfin_deployment/jellyfin-deployment.yaml
@@ -5,6 +5,7 @@ kind: Deployment
 metadata:
   # name: A unique name for your Deployment.
   name: jellyfin-deployment
+  namespace: media
   labels:
     app: jellyfin
 spec:
