--- a/jellyfin_deployment/jellyfin-NodePort.yaml
+++ b/jellyfin_deployment/jellyfin-NodePort.yaml
@@ -6,6 +6,7 @@ kind: Service
 metadata:
   # name: A unique name for the NodePort service.
   name: jellyfin-nodeport-svc
+  namespace: media
   labels:
     app: jellyfin
 spec:
