--- a/jellyfin_deployment/jellyfin-externalIP.yaml
+++ b/jellyfin_deployment/jellyfin-externalIP.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jellyfin-external
+  namespace: media
   #namespace: default # Or your namespace
 spec:
   selector:
