--- a/jellyfin_deployment/jellyfin-pv-nfs.yaml
+++ b/jellyfin_deployment/jellyfin-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: jellyfin-pv # A unique name for your PV
+  namespace: media
   labels:
     app: jellyfin
 spec:
