--- a/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pvc-nfs.yaml
@@ -7,7 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgre-homarr-pvc  #pvc claim name
-  #namespace: homarr
+  namespace: homarr
   labels:
     app: postgrehomarr
 spec:
