--- a/homarr_deployment/homarr-secrets.yaml
+++ b/homarr_deployment/homarr-secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: homarr-secrets
-  #namespace: homarr
+  namespace: homarr
 type: Opaque
 stringData:
   # hexadecimal key for homarr
