--- a/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
+++ b/postgreSQL_homarr_deployment/postgre-homarr-pv-nfs.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: postgre-homarr-pv # A unique name for your PV
-  #namespace: homarr
+  namespace: homarr
   labels:
     app: postgrehomarr
 spec:
