--- a/heimdall_deployment/heimdall-pv-nfs.yaml
+++ b/heimdall_deployment/heimdall-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: heimdall-pv # A unique name for your PV
+  namespace: default
   labels:
     app: heimdall
 spec:
