--- a/heimdall_deployment/heimdall-pvc-nfs.yaml
+++ b/heimdall_deployment/heimdall-pvc-nfs.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: heimdall-pvc  #pvc claim name
+  namespace: default
   labels:
     app: heimdall
 spec:
