clean up grafana nodeport + add default namespace for automation.

--- a/grafana_deployment/grafana-deployment.yaml
+++ b/grafana_deployment/grafana-deployment.yaml
@@ -5,6 +5,7 @@ kind: Deployment
 metadata:
   # name: A unique name for your Deployment.
   name: grafana-deployment
+  namespace: default
   labels:
     app: grafana
 spec:
