--- a/grafana_deployment/grafana-clusterIP.yaml
+++ b/grafana_deployment/grafana-clusterIP.yaml
@@ -6,6 +6,7 @@ kind: Service
 metadata:
   # name: A unique name for the ClusterIP service.
   name: grafana-clusterip-svc
+  namespace: default
   labels:
     app: grafana
 spec:
