--- a/grafana_deployment/grafana-external.yaml
+++ b/grafana_deployment/grafana-external.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana-external
-  #namespace: default # Or your namespace
+  namespace: default
 spec:
   selector:
     app: grafana # This label should match your Deployment's pod labels
