--- a/grafana_deployment/grafana-pv-nfs.yaml
+++ b/grafana_deployment/grafana-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: grafana-pv # A unique name for your PV
+  namespace: default
   labels:
     app: grafana
 spec:
