--- a/grafana_deployment/grafana-pvc-nfs.yaml
+++ b/grafana_deployment/grafana-pvc-nfs.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc  #pvc claim name
+  namespace: default
   labels:
     app: grafana
 spec:
