clean up influx nodeport + add default namespace for automation.

--- a/influxDB_deployment/influxdb-clusterIP.yaml
+++ b/influxDB_deployment/influxdb-clusterIP.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: influxdb-clusterip-svc # Name for the internal service
+  namespace: default
   labels:
     app: influxdb
 spec:
