--- a/influxDB_deployment/influxdb-external.yaml
+++ b/influxDB_deployment/influxdb-external.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: influxdb-external
-  #namespace: default # Or your namespace
+  namespace: default 
 spec:
   selector:
     app: influxdb # This label should match your Jellyfin Deployment's pod labels
