--- a/influxDB_deployment/influxdb-pv-nfs.yaml
+++ b/influxDB_deployment/influxdb-pv-nfs.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: influxdb-pv # A unique name for your PV
+  namespace: default
   labels:
     app: influxdb
 spec:
