--- a/influxDB_deployment/influxdb-pvc-nfs.yaml
+++ b/influxDB_deployment/influxdb-pvc-nfs.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: influxdb-pvc  #pvc claim name
+  namespace: default
   labels:
     app: influxdb
 spec:
