add revision limit for grafana

--- a/grafana_deployment/grafana-deployment.yaml
+++ b/grafana_deployment/grafana-deployment.yaml
@@ -10,6 +10,7 @@ metadata:
     app: grafana
 spec:
   replicas: 1 # e.g., 2
+  revisionHistoryLimit: 2  # Max number of replicasets
   selector:
     # Must match the labels on the Pod template below.
     matchLabels:
